Update and rename preface.txt to preface.html

--- a/REACT/preface.html
+++ b/REACT/preface.html
@@ -12,6 +12,26 @@ so just one library : and you can create
 5. Native desktop apps
 
 
-hence learn react to focus only on the thing that makes your app different 
+hence learn react to focus only on the thing that makes your app different .
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
 
 
